# writing-com-scraper

./: .gitignore  README.md  batch.fish  scraper.py
epuber/: epuber.py  pyproject.toml  test_epuber.py
scraper/: pyproject.toml  scraper.py  test_scraper.py
scraper/scraper/: scrape.py
scraper/tests/: test_scraper.py
