[tool.poetry]
name = "epuber"
version = "0.1.0"
description = ""
authors = ["Hawken Rives <hawkrives@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.7"
ebooklib = "^0.17.0"
markdown2 = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
