[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Hawken Rives <hawkrives@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
html2text = "^2018.1"
requests = "^2.21"
requests-cache = "^0.4.13"
pendulum = "^2.0"
lxml = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
